--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,10 +4,11 @@ body {
   line-height: 1;
 }
 
-textarea{
+textarea {
   background: transparent;
   border: none;
   resize: none;
+  width: 100%;
   color: #000000;
   border-left: 1px solid black;
   padding: 10px;
